Alteração cadastro, login e cursos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="mobile-menu-icon">
-                <button onclick="menuShow()"><img class="icon" src="assets/img/menu_white_36dp.svg" alt=""></button>
+                <button onclick="menuShow()"><img class="icon" src="img/menu_white_36dp.svg" alt=""></button>
             </div>
         </nav>
         <div class="mobile-menu">
@@ -67,7 +67,7 @@
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Em Fotografia, Design Gráfico e Cinema e Audiovisual</h2>
-                    <a href="./html/cadastro.html" target="_blank" class="btn btn-main">Matricule-se</a>
+                    <a href="./html/pagamento.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Design Gráfico</h2>
-                    <a href="./html/cadastro.html" target="_blank" class="btn btn-main">Matricule-se </a>
+                    <a href="./html/CompraDesigngrafico.html" target="_blank" class="btn btn-main">Matricule-se </a>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Fotografia</h2>
-                    <a href="./html/cadastro.html" target="_blank" class="btn btn-main">Matricule-se</a>
+                    <a href="./html/CompraFotografia.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
 
@@ -106,7 +106,7 @@
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Cinema e Audiovisual</h2>
-                    <a href="./html/cadastro.html" target="_blank" class="btn btn-main">Matricule-se</a>
+                    <a href="./html/CompraCinemaeAudiovisual.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
         </div>
@@ -176,11 +176,15 @@
     </section>
 
     <!-- Nossa História -->
-<section id="nossa-historia" class="empresa">
-    <h1>Arte Síntese</h1>
-    <h2>Nossa História</h2>
-    <p>A Escola Arte Síntese é uma plataforma online inovadora, dedicada a oferecer cursos especializados nas áreas de Fotografia, Design Gráfico e Cinema Audiovisual. Nosso objetivo é proporcionar uma experiência de aprendizado única para pessoas que desejam se aprofundar e se profissionalizar no fascinante universo das artes, com conteúdos pensados para estimular a criatividade, aprimorar habilidades técnicas e expandir horizontes no mundo visual.</p>
-</section>
+    <section id="nossa-historia" class="empresa">
+        <h1>Arte Síntese</h1>
+        <h2>Nossa História</h2>
+        <p>A Escola Arte Síntese é uma plataforma online inovadora, dedicada a oferecer cursos especializados nas áreas
+            de Fotografia, Design Gráfico e Cinema Audiovisual. Nosso objetivo é proporcionar uma experiência de
+            aprendizado única para pessoas que desejam se aprofundar e se profissionalizar no fascinante universo das
+            artes, com conteúdos pensados para estimular a criatividade, aprimorar habilidades técnicas e expandir
+            horizontes no mundo visual.</p>
+    </section>
 
 
     <footer>
@@ -191,7 +195,8 @@
 
                 <div id="footer_social_media">
                     <!-- botão intagram  -->
-                    <a href="https://www.instagram.com/artesintese_/" target="_blank" class="footer-link" id="instagram">
+                    <a href="https://www.instagram.com/artesintese_/" target="_blank" class="footer-link"
+                        id="instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                     <!-- botão youtube  -->
