--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -1,93 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <title>Cadastro - Arte Sintese</title>
     <link rel="stylesheet" href="../css/cadastro.css">
-
-    <title>Cadastro e Pagamento</title>
-
 </head>
-
 <body>
-    <header>
-        <h1>Inscreva-se nos Nossos Cursos</h1>
-    </header>
-
-    <main>
-        <form id="form-cadastro">
-            <h2>Dados Pessoais</h2>
+    <div class="container">
+        <h2>Cadastro de Usuário </h2>
+        <form action="/submit-cadastro" method="POST" id="form-cadastro">
             <label for="nome">Nome Completo:</label>
-            <input type="text" id="nome" name="nome" required>
+            <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required>
 
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
 
-            <h2>Escolha o Curso</h2>
-            <label>
-                <input type="radio" name="curso" value="Design Gráfico" required>
-                Design Gráfico
-            </label>
-            <label>
-                <input type="radio" name="curso" value="Fotografia">
-                Fotografia
-            </label>
-            <label>
-                <input type="radio" name="curso" value="Cinema e Audiovisual">
-                Cinema e Audiovisual
-            </label>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" placeholder="Crie uma senha" required>
 
-            <h2>Pagamento</h2>
-            <label for="pagamento">Forma de Pagamento:</label>
-            <select id="pagamento" name="pagamento" required>
-                <option value="">Selecione</option>
-                <option value="Cartão de Crédito">Cartão de Crédito</option>
-                <option value="Pix">Pix</option>
-                <option value="Boleto">Boleto</option>
-            </select>
+            <label for="confirmar-senha">Confirmar Senha:</label>
+            <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha" required>
 
-            <div id="dados-cartao" style="display: none;">
-                <h3>Dados do Cartão</h3>
-                <label for="numero-cartao">Número do Cartão:</label>
-                <input type="text" id="numero-cartao" name="numero-cartao" placeholder="Ex: 1234 5678 9123 4567">
-
-                <label for="validade-cartao">Validade:</label>
-                <input type="month" id="validade-cartao" name="validade-cartao">
-
-                <label for="cvv-cartao">CVV:</label>
-                <input type="text" id="cvv-cartao" name="cvv-cartao" placeholder="Ex: 123">
-            </div>
-
-            <div id="dados-pix" style="display: none;">
-                <h3>Pix</h3>
-                <p>Sua chave Pix será enviada para o seu e-mail após a confirmação.</p>
-            </div>
-
-            <div id="dados-boleto" style="display: none;">
-                <h3>Boleto</h3>
-                <p>O boleto será gerado e enviado para o seu e-mail após a confirmação.</p>
-            </div>
-
-            <button type="submit">Finalizar Inscrição</button>
+            <button type="submit">Cadastrar</button>
         </form>
-        <p id="mensagem" style="color: green; font-weight: bold; display: none;"></p>
-    </main>
-   
 
-          
-    </footer>
+        <p>Já tem uma conta? <a href="../html/login.html">Faça login</a></p>
+    </div>
+
     <script src="../js/main.js"></script>
-
-    <footer>
-        <p>© 2024 Arte Síntese</p>
-    </footer>
-    <script src="script.js"></script>
 </body>
-
 </html>
