--- a/html/lembrarsenha.html
+++ b/html/lembrarsenha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperação de Senha</title>
-    <link rel="stylesheet" href="lembrarsenha.css">
+    <link rel="stylesheet" href="../css/lembrarsenha.css">
 </head>
 <body>
     <div class="form-container">
