--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
             <label for="password">Senha:</label>
             <input type="password" id="password" placeholder="Digite sua senha" required>
             <button type="submit">Entrar</button>
-            <p>Lembrar - me <a href="./recuperaçaosenha.html"> Esqueceu a senha</a></p>
+            <p>Lembrar - me <a href="./lembrarsenha.html"> Esqueceu a senha</a></p>
 
         </form>
         
