finalizei o css dos cursos

--- a/html/Cinema e Audiovisual.html
+++ b/html/Cinema e Audiovisual.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curso de Cinema e Audiovisual</title>
-  <link rel="stylesheet" href="../css/Sobre o curso.css">
+  <link rel="stylesheet" href="../css/cinema-audiovisual.css">
 </head>
 <body>
   <header>
+   
+    
     <h1>Curso de Cinema e Audiovisual</h1>
   </header>
   <main>
+    <img src="../img/cinema 1.jpg" alt="Prepativos-para-as-filmagens">
     <p>Prepare-se para criar histórias incríveis e dominar o mundo do audiovisual. Nosso curso aborda:</p>
     <ul>
       <li>Fundamentos de Roteiro e Narrativa</li>
