--- a/html/fotografia.html
+++ b/html/fotografia.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curso de Fotografia</title>
-  <link rel="stylesheet" href="../css/Sobre o curso.css">
+  <link rel="stylesheet" href="../css/fotografia.css">
 </head>
 <body>
   <header>
     <h1>Curso de Fotografia</h1>
   </header>
   <main>
+   
+    <img src="../img/fotografia.jpg" alt="moça fazendo seu trabalho de designer-grafico">
+
     <p>Transforme sua paixão por fotografar em uma habilidade profissional. Nosso curso oferece:</p>
     <ul>
       <li>Introdução à Fotografia Digital</li>
