--- a/html/Design gráfico.html
+++ b/html/Design gráfico.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design Gráfico</title>
-  <link rel="stylesheet" href="../css/Sobre o curso.css">
+  <link rel="stylesheet" href="../css/designer.css">
 </head>
+
 <body>
   <header>
     <h1>Curso de Design Gráfico</h1>
   </header>
   <main>
+
+    <img src="../img/Designer-grafico.jpg" alt="moça fazendo seu trabalho de designer-grafico">
+
     <p>Explore as ferramentas e técnicas para criar designs incríveis. Nosso curso aborda:</p>
     <ul>
       <li>Teoria das Cores</li>
@@ -18,13 +23,14 @@
       <li>Adobe Photoshop e Illustrator</li>
     </ul>
     <p>Aprenda com profissionais experientes e domine o mundo do design gráfico!</p>
-    
+
     <p class="preco-curso"><strong>Preço do curso:</strong> R$ 1.000,00</p>
-    
-    <a href="./cadastro.html" class="btn-matricula">Quero Me Matricular</a>
+
+    <a href="./cadastro.html" class="btn-matricula btn-matriculaA">Quero Me Matricular</a>
   </main>
   <footer>
     <p>© 2024 Arte Síntese</p>
   </footer>
 </body>
+
 </html>
