alterações de responsividade

--- a/html/fotografia.html
+++ b/html/fotografia.html
@@ -12,7 +12,7 @@
   </header>
   <main>
    
-    <img src="../img/fotografia.jpg" alt="moça fazendo seu trabalho de designer-grafico">
+    <img src="../img/foto1.jpg" alt="mexendo na camera">
 
     <p>Transforme sua paixão por fotografar em uma habilidade profissional. Nosso curso oferece:</p>
     <ul>
