--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
         <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide">
-                <img src="./img/prédio.jpg" alt="Formação e Capacitação">
+                <img src="./img/capa 12.jpg" alt="Formação e Capacitação">
                 <div class="overlay">
                     <div class="overlay-container"></div>
                     <h1 class="text-uppercase">
                         <span class="text-color">Formação</span>
                         <span class="text-color1">e Capacitação</span>
                     </h1>
-                    <h2 class="text-color2">Em Fotografia, Design Gráfico e Cinema e Audiovisual</h2>
+                    <span><h2 class="text-color2">Em Fotografia, Design Gráfico e Cinema e Audiovisual</h2></span>
                     <a href="./html/pagamento.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
 
             <!-- Slide 2 -->
             <div class="swiper-slide">
-                <img src="./img/design.jpg" alt="Designer Gráfico">
+                <img src="./img/design 8.jpg" alt="Designer Gráfico">
                 <div class="overlay">
                     <h1 class="text-uppercase">
                         <span class="text-color">Formação</span>
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Design Gráfico</h2>
-                    <a href="./html/CompraDesigngrafico.html" target="_blank" class="btn btn-main">Matricule-se </a>
+                    <a href="./html/Design gráfico.html" target="_blank" class="btn btn-main">Matricule-se </a>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Fotografia</h2>
-                    <a href="./html/CompraFotografia.html" target="_blank" class="btn btn-main">Matricule-se</a>
+                    <a href="./html/fotografia.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                         <span class="text-color1">e Capacitação</span>
                     </h1>
                     <h2 class="text-color2">Cinema e Audiovisual</h2>
-                    <a href="./html/CompraCinemaeAudiovisual.html" target="_blank" class="btn btn-main">Matricule-se</a>
+                    <a href="./html/Cinema e Audiovisual.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
         </div>
@@ -276,7 +276,7 @@
     </footer>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/carrossel.js"></script>
 
 
 </body>
