--- a/html/Cinema e Audiovisual.html
+++ b/html/Cinema e Audiovisual.html
@@ -13,6 +13,18 @@
     <h1>Curso de Cinema e Audiovisual</h1>
   </header>
   <main>
+
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+      
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
     <img src="../img/cinema 1.jpg" alt="Prepativos-para-as-filmagens">
     <p>Prepare-se para criar histórias incríveis e dominar o mundo do audiovisual. Nosso curso aborda:</p>
     <ul>
