--- a/html/fotografia.html
+++ b/html/fotografia.html
@@ -12,6 +12,18 @@
   </header>
   <main>
    
+
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
     <img src="../img/foto1.jpg" alt="mexendo na camera">
 
     <p>Transforme sua paixão por fotografar em uma habilidade profissional. Nosso curso oferece:</p>
