--- a/html/CompraDesigngrafico.html
+++ b/html/CompraDesigngrafico.html
@@ -14,6 +14,18 @@
     </header>
 
     <main>
+
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+            </div>
+          </div>
+          <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+          <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+          </script>
+
         <div class="curso-container">
             <div class="grid-item">
                 <img src="../img/design 8.jpg" alt="Foto do Curso" class="curso-foto">
