--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -28,6 +28,17 @@
         <p>Já tem uma conta? <a href="../html/login.html">Faça login</a></p>
     </div>
     
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
     <script>
       document.getElementById('form-cadastro').addEventListener('submit', function(event) {
         var senha = document.getElementById('senha').value;
