--- a/html/cursos.html
+++ b/html/cursos.html
@@ -14,6 +14,19 @@
         <p>Explore os cursos profissionalizantes da Arte Síntese, criados para transformar sua paixão em profissão.
         </p>
 
+
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+            </div>
+          </div>
+          <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+          <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+          </script>
+
+
         <div class="curso-card">
             <img src="img/introducao-ao-design-grafico.jpg" alt="Ilustração representando design gráfico">
             <div class="course-content">
