--- a/html/lembrarsenha.html
+++ b/html/lembrarsenha.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="../css/lembrarsenha.css">
 </head>
 <body>
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
     <div class="form-container">
         <h2>Esqueceu sua senha?</h2>
         <form action="" method="POST">
