--- a/html/pagamento.html
+++ b/html/pagamento.html
@@ -23,6 +23,18 @@
         <h1>Pagamento</h1>
     </header>
 
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
     <main>
         <form id="form-cadastro">
             <h2>Dados Pessoais</h2>
