--- a/html/sobre.html
+++ b/html/sobre.html
@@ -55,6 +55,18 @@
 </style>
 
 <body>
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
     <!-- <script src=""></script> -->
 
     <h1>Arte Síntese</h1>
