--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide">
-                <img src="./img/capa 12.jpg" alt="Formação e Capacitação">
+                <img src="./img/capa 11.jpg" alt="Formação e Capacitação">
                 <div class="overlay">
                     <div class="overlay-container"></div>
                     <h1 class="text-uppercase">
                         <span class="text-color">Formação</span>
                         <span class="text-color1">e Capacitação</span>
                     </h1>
-                    <span><h2 class="text-color2">Em Fotografia, Design Gráfico e Cinema e Audiovisual</h2></span>
+                    <span><h2 class="text-color2"><b>Em Fotografia, Design Gráfico e Cinema e Audiovisual</b></h2></span>
                     <a href="./html/pagamento.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                         <span class="text-color">Formação</span>
                         <span class="text-color1">e Capacitação</span>
                     </h1>
-                    <h2 class="text-color2">Design Gráfico</h2>
+                    <h2 class="text-color2"><b>Design Gráfico</b></h2>
                     <a href="./html/Design gráfico.html" target="_blank" class="btn btn-main">Matricule-se </a>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                         <span class="text-color">Formação</span>
                         <span class="text-color1">e Capacitação</span>
                     </h1>
-                    <h2 class="text-color2">Fotografia</h2>
+                    <h2 class="text-color2"><b>Fotografia</b></h2>
                     <a href="./html/fotografia.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                         <span class="text-color">Formação</span>
                         <span class="text-color1">e Capacitação</span>
                     </h1>
-                    <h2 class="text-color2">Cinema e Audiovisual</h2>
+                    <h2  class="text-color2"><b>Cinema e Audiovisual</b></h2>
                     <a href="./html/Cinema e Audiovisual.html" target="_blank" class="btn btn-main">Matricule-se</a>
                 </div>
             </div>
