--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <!-- Frase Inspiradora -->
     <section class="frase">
-        <p>"Transformando sonhos em realidade através da educação de qualidade!"</p>
+        <p>"Transformando sonhos em realidade através <br> da educação de qualidade!"</p>
     </section>
 
     <!-- Cursos -->
@@ -199,7 +199,7 @@
         <div id="footer_content">
             <div id="footer_contacts">
                 <h1>Arte Síntese</h1>
-                <p>Transformondo sonhos em realidade através da edução de qualidade.</p>
+                <p>Transformando sonhos em realidade através da edução de qualidade.</p>
 
                 <div id="footer_social_media">
                     <!-- botão intagram  -->
@@ -212,7 +212,7 @@
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                     <!-- botão whatsapp  -->
-                    <a href="tel:+55 (11) 9 5129-2008" target="_blank" class="footer-link" id="whatsapp">
+                    <a href="tel:+55 (11) xxxxx-xxxx" target="_blank" class="footer-link" id="whatsapp">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </div>
@@ -241,10 +241,10 @@
                     <h3>Navegue no site</h3>
                 </li>
                 <li>
-                    <a href="#cursos" class="footer-link">cursos</a>
+                    <a href="#cursos" class="footer-link">Cursos</a>
                 </li>
                 <li>
-                    <a href="#nossa-historia" class="footer-link">sobre</a>
+                    <a href="#nossa-historia" class="footer-link">Sobre</a>
                 </li>
                 <li>
                     <a href="html/contatos.html" class="footer-link">Contatos</a>
@@ -256,7 +256,7 @@
                 <h3>Newsletter</h3>
 
                 <p>
-                    Coloque seu email e fique por dentro das novidades
+                    Coloque seu email e fique por dentro das novidades.
                 </p>
 
                 <div id="input_group">
@@ -270,7 +270,7 @@
 
         <div id="footer_copyright">
             &#169
-            2024 all rights reserved
+            2024 Arte Síntese
             <!--  mudar ainda, colocar oq eu tenho no note do curso  -->
         </div>
     </footer>
